# windows-display-mode-cli

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
src/: cli.cpp  cli.h  display_config.cpp  display_config.h  main.cpp  util.h  version.h  windows_display.cpp  windows_display.h
